Add checkstyle (#327)
* Add checkstyle

* fix sonar