@@ -9,11 +9,13 @@ import io.micronaut.context.ApplicationContext;
 import io.micronaut.inject.qualifiers.Qualifiers;
 import jakarta.inject.Inject;
 import jakarta.inject.Singleton;
-
+import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
+/**
+ * Service to manage Kafka Streams.
+ */
 @Singleton
 public class StreamService {
     @Inject
@@ -26,20 +28,22 @@ public class StreamService {
     ApplicationContext applicationContext;
 
     /**
-     * Find all Kafka Streams by given namespace
+     * Find all Kafka Streams by given namespace.
+     *
      * @param namespace The namespace
      * @return A list of Kafka Streams
      */
     public List<KafkaStream> findAllForNamespace(Namespace namespace) {
         return streamRepository.findAllForCluster(namespace.getMetadata().getCluster()).stream()
             .filter(stream -> stream.getMetadata().getNamespace().equals(namespace.getMetadata().getName()))
-                .toList();
+            .toList();
     }
 
     /**
-     * Find a Kafka Streams by namespace and name
+     * Find a Kafka Streams by namespace and name.
+     *
      * @param namespace The namespace
-     * @param stream The Kafka Streams name
+     * @param stream    The Kafka Streams name
      * @return An optional Kafka Streams
      */
     public Optional<KafkaStream> findByName(Namespace namespace, String stream) {
@@ -49,26 +53,30 @@ public class StreamService {
     }
 
     /**
-     * Is given namespace owner of the given Kafka Streams
+     * Is given namespace owner of the given Kafka Streams.
+     *
      * @param namespace The namespace
-     * @param resource The Kafka Streams
+     * @param resource  The Kafka Streams
      * @return true if it is, false otherwise
      */
     public boolean isNamespaceOwnerOfKafkaStream(Namespace namespace, String resource) {
         // KafkaStream Ownership is determined by both Topic and Group ownership on PREFIXED resource,
         // this is because KafkaStream application.id is a consumer group but also a prefix for internal topic names
-        return accessControlEntryService.findAllGrantedToNamespace(namespace)
-                .stream()
-                .filter(accessControlEntry -> accessControlEntry.getSpec().getPermission() == AccessControlEntry.Permission.OWNER)
-                .filter(accessControlEntry -> accessControlEntry.getSpec().getResourcePatternType() == AccessControlEntry.ResourcePatternType.PREFIXED)
-                .filter(accessControlEntry -> resource.startsWith(accessControlEntry.getSpec().getResource()))
-                .map(accessControlEntry -> accessControlEntry.getSpec().getResourceType())
-                .collect(Collectors.toList())
-                .containsAll(List.of(AccessControlEntry.ResourceType.TOPIC, AccessControlEntry.ResourceType.GROUP));
+        return new HashSet<>(accessControlEntryService.findAllGrantedToNamespace(namespace)
+            .stream()
+            .filter(accessControlEntry -> accessControlEntry.getSpec().getPermission()
+                == AccessControlEntry.Permission.OWNER)
+            .filter(accessControlEntry -> accessControlEntry.getSpec().getResourcePatternType()
+                == AccessControlEntry.ResourcePatternType.PREFIXED)
+            .filter(accessControlEntry -> resource.startsWith(accessControlEntry.getSpec().getResource()))
+            .map(accessControlEntry -> accessControlEntry.getSpec().getResourceType())
+            .toList())
+            .containsAll(List.of(AccessControlEntry.ResourceType.TOPIC, AccessControlEntry.ResourceType.GROUP));
     }
 
     /**
-     * Create a given Kafka Stream
+     * Create a given Kafka Stream.
+     *
      * @param stream The Kafka Stream to create
      * @return The created Kafka Stream
      */
@@ -77,11 +85,13 @@ public class StreamService {
     }
 
     /**
-     * Delete a given Kafka Stream
+     * Delete a given Kafka Stream.
+     *
      * @param stream The Kafka Stream
      */
     public void delete(Namespace namespace, KafkaStream stream) {
-        AccessControlEntryAsyncExecutor accessControlEntryAsyncExecutor = applicationContext.getBean(AccessControlEntryAsyncExecutor.class,
+        AccessControlEntryAsyncExecutor accessControlEntryAsyncExecutor =
+            applicationContext.getBean(AccessControlEntryAsyncExecutor.class,
                 Qualifiers.byName(stream.getMetadata().getCluster()));
         accessControlEntryAsyncExecutor.deleteKafkaStreams(namespace, stream);
 
